# semi_automatic_shape_correspondence

./: open3d_manual_annotation.py  open3d_manual_annotation_avatar.py  readme.md
data/: .~lock.body_tris.csv#  avatar_one_component.csv  avatar_one_component.ply  body_tris.csv  body_tris_marching_cube_low.ply  output.ply
embedded_deformation/: CMakeLists.txt  README.md  config.yaml  tests_config.yaml
embedded_deformation/app/: embedded_deformation_sample.cpp
embedded_deformation/utils/include/utils/visualization/: polyscopeWrapper.h
embedded_deformation/utils/src/cloud/: embeddedDeformation.cpp
